[package]
name = "touchHLE_proc_macros"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }

[lib]
proc_macro = true
path = "lib.rs"

[dependencies]
proc-macro2 = "1.0.60"
quote = "1.0.28"
syn = {version = "2.0.18", features = ["full", "printing", "extra-traits"]}
